#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gr8], [0.0.1], [krzysztof.grajek@googlemail.com])
AC_PROG_CC=GCC
# Checks for programs.

# Checks for libraries.
AM_INIT_AUTOMAKE

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
